[gd_scene load_steps=3 format=3 uid="uid://b7qy77jtoc4nt"]

[ext_resource type="Script" uid="uid://c51bjntfiwfhh" path="res://scripts/persistence/prefabs/load_item.gd" id="1_e4mlv"]
[ext_resource type="Theme" uid="uid://bqtjul82stgbk" path="res://settings/button_theme.tres" id="2_plabf"]

[node name="LoadItem" type="HBoxContainer"]
offset_right = 314.0
offset_bottom = 31.0
size_flags_horizontal = 3
focus_mode = 2
script = ExtResource("1_e4mlv")

[node name="Name" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Load Name"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="Date" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Load Date"
text_overrun_behavior = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 4
size = Vector2i(266, 100)
dialog_text = "SAVEFILE_LOAD_CONFIRMATION"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
auto_translate_mode = 1
initial_position = 4
size = Vector2i(288, 100)
dialog_text = "SAVEFILE_DELELTE_CONFIRMATION"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_plabf")
text = "LOAD_BUTTON"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_plabf")
text = "DELETE_BUTTON"

[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
